# uchproekt-backend

./: .dockerignore  .gitignore  Cargo.toml  docker-compose.prod.yml  docker-compose.yml
production/: Dockerfile
src/: main.rs
src/api/: errors.rs  mod.rs
src/api/middlewares/: authenticate.rs
src/api/v1/: mod.rs
src/api/v1/auth/: authorize.rs  logout.rs  mod.rs  refresh_tokens.rs
src/api/v1/categories/: create_category.rs  delete_category.rs  get_categories.rs  mod.rs  patch_category.rs
src/api/v1/company_services/: create_company_services.rs  delete_company_services.rs  get_company_services.rs  mod.rs  update_company_services.rs
src/api/v1/fields/: create_fields.rs  delete_fields.rs  get_fields.rs  mod.rs
src/api/v1/files/: create_file.rs  dto.rs  get_file.rs  mod.rs
src/api/v1/orders/: create_order.rs  get_orders.rs  mod.rs
src/api/v1/products/: create_product.rs  delete_products.rs  get_products.rs  mod.rs  update_product.rs
src/cache/: mod.rs
src/config/: mod.rs
src/db/: mod.rs
src/db/entity/: Cargo.toml
src/db/entity/src/: admin.rs  category.rs  category_product.rs  field.rs  field_product.rs  (+9 more)
src/db/migration/: Cargo.toml
src/s3/: mod.rs
src/services/: mod.rs
src/services/auth/: mod.rs
src/services/category/: mod.rs
src/services/company_services/: dto.rs  mod.rs
src/services/field/: dto.rs  field_type.rs  mod.rs
src/services/files/: mod.rs
src/services/order/: mod.rs
src/services/product/: mod.rs
src/state/: mod.rs
src/utilities/: mod.rs
src/utilities/seaorm_utils/: mod.rs
src/utilities/serde_utils/: mod.rs
(+26 files in other folders)
