[package]
name = "uchproekt-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.4.1"
dotenvy = "0.15.7"
env_logger = "0.11.0"
log = "0.4.20"
redis = { version = "0.24.0", features = ["r2d2", "ahash"] }
serde = { version = "1.0.195", features = ["derive"] }
